--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+		<p class="notice"><%= notice %></p>
+		<p class="alert"><%= alert %></p>
+
+			<% if user_signed_in? %>
+		Olá <strong><%= current_user.email %></strong>!
+			<li><%= link_to "Editar perfil", edit_user_registration_path %></li>
+	<li><%= link_to "Sair", destroy_user_session_path, method: :delete %></li>
+	<% end %>
     <%= yield %>
   </body>
 </html>
